feat: Implement validation for delete user reasons in Audit and User controllers